[package]
name = "api_kit"
version = "0.1.0"
readme = "README.md"
description = "Rust library for build typesafe web api client."
repository = "https://github.com/pocket7878/api_kit"
licence = "MIT"
authors = [
  "Pocket7878 <poketo7878@gmail.com>"
]

[dependencies]
hyper = "0.9.10"
serde = "0.8"
serde_json = "0.8"
error = "0.1.9"
[dependencies.url]
git = "https://github.com/servo/rust-url"
